# nqs-playground

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README.rst  Singularity  build_conda_package.sh  build_locally.sh  build_locally_cpu.sh  conda-build.yml  conda-cpu.yml  conda-devel.yml  conda-gpu.yml  devel.yml  devel_gpu.yml  distributed_example.py  environment.yml  fast_swo_v2.py  get_torch_build_info.sh  runner.py  setup.py  small.py  swo_on_1x10.py  training.py
benchmark/: benchmark_apply.py  benchmark_jacobian.py  benchmark_zanella.py
cartesius/: build_pytorch.sh  conda-cartesius.yml
cbits/: bits512.cpp  bits512.hpp  common.hpp  config.hpp  data.cpp  data.hpp  dotu.cpp  dotu.hpp  errors.cpp  errors.hpp  forward_propagator.cpp  forward_propagator.hpp  heisenberg.cpp  heisenberg.hpp  init.cpp  jacobian.cpp  jacobian.hpp  metropolis.cpp  metropolis.hpp  monte_carlo.cpp  monte_carlo.hpp  monte_carlo_v2.cpp  monte_carlo_v2.hpp  nn.cpp  nn.hpp  nqs.cpp  nqs.hpp  operator.cpp  operator.hpp  operators.cpp  operators.hpp  parallel.cpp  parallel.hpp  polynomial.cpp  polynomial.hpp  polynomial_state.cpp  polynomial_state.hpp  pool.cpp  pool.hpp  quantum_state.hpp  (+22 more)
cbits/common/: CMakeLists.txt  accumulator.cpp  accumulator.hpp  bits512.cpp  bits512.hpp  common.hpp.backup  config.hpp  errors.cpp  errors.hpp  metropolis.cpp  parallel.cpp  parallel.hpp  polynomial.cpp  polynomial.hpp  random.cpp  random.hpp  tensor_info.hpp  unpack.cpp  unpack.hpp  wrappers.cpp  wrappers.hpp  zanella.cpp  zanella.hpp
cbits/cpu/: CMakeLists.txt  dotu.cpp  dotu.hpp  kernels.cpp  kernels.hpp  unpack.cpp  unpack.hpp  unpack_avx.cpp
cbits/gpu/: CMakeLists.txt  dotu.cu  dotu.hpp  unpack.cu  unpack.hpp
cbits/python/: CMakeLists.txt  bind_cuda.cpp  bind_cuda.hpp  bind_heisenberg.cpp  bind_heisenberg.hpp  bind_jacobian.cpp  bind_jacobian.hpp  bind_metropolis.cpp  bind_metropolis.hpp  bind_operator.cpp  bind_operator.hpp  bind_polynomial.cpp  bind_polynomial.hpp  bind_polynomial_state.cpp  bind_polynomial_state.hpp  bind_quantum_state.cpp  bind_spin_basis.cpp  bind_spin_basis.hpp  bind_symmetry.cpp  bind_symmetry.hpp  bind_v2.cpp  bind_v2.hpp  init.cpp  pybind11_helpers.hpp  trim.hpp
cbits/test/headers/: CMakeLists.txt  common-header.cpp  config-header.cpp  data-header.cpp  errors-header.cpp  monte_carlo-header.cpp  nn-header.cpp  parallel-header.cpp  polynomial-header.cpp  quantum_state-header.cpp  random-header.cpp  spin-header.cpp  spin_basis-header.cpp
cbits/v2/: accumulator.cpp  accumulator.hpp  zanella.cpp  zanella.hpp
conda/cpu/: build.sh  conda_build_config.yaml  meta.yaml
conda/gpu/: build.sh  conda_build_config.yaml  meta.yaml
data/: 1x10.out  Kagome-12.hamiltonian  Kagome-18.hamiltonian  Kagome-24.hamiltonian  Kagome-48.hamiltonian
data/1x10/: README.md  ground_state.pickle  hamiltonian.txt
data/1x16/: README.md  ground_state.pickle  hamiltonian.txt
data/1x18/: README.md  ground_state.pickle  hamiltonian.txt
data/1x20/: README.md  ground_state.pickle  hamiltonian.txt
data/1x22/: README.md  hamiltonian.txt
data/1x24/: README.md  basis.pickle  ground_state.npy  hamiltonian.txt
data/1x26/: README.md  hamiltonian.txt
data/kagome12/: README.md  ground_state.pickle  hamiltonian.txt
data/triangle24/: basis.pickle  ground_state.npy
example/1x10/: amplitude.py  amplitude_wip.py  gradient_descend.py  sign.py  sign_wip.py  stochastic_reconfiguration.py  supervised_amplitude.json  supervised_sign.json
example/carleo2017/: from_scratch.py  models.py
example/chain/: diagonalise.py
example/heisenberg_chain/: from_scratch.py
example/heisenberg_square/: gradient_descend.py  heisenberg_square_36_positive.yaml  pre_training.py
example/triangleperiodic/16/: amplitude.py  sign.py
example/wip/: square.py
nqs_playground/: Trial.py  __init__.py  _benes.py  _extension.py  _jacobian.py  _slepc.py  _tabu_sampler.py  autoregressive.py  benes.py  commands.py  core.py  distributed.py  functional.py  hamiltonian.py  lbfgs.py  model.py  monte_carlo.py  mpi.py  rbm.py  run_swo.py  runner.py  sampling.py  sgd.py  spawn.py  sr.py  supervised.py  swo.py  symmetry.py
nqs_playground/cbits/: accumulator.cpp  accumulator.hpp  init.cpp  parallel.hpp  zanella.cpp  zanella.hpp
nqs_playground/v2/: supervised.py
test/: basis_5x5.pickle  difficult_to_sample_5x5.pt  test_acceptance.py  test_apply.py  test_basis.py  test_hamiltonian.py  test_jacobian.py  test_local_values.py  test_monte_carlo.py  test_polynomial.py  test_sampling.py  test_symmetry.py  test_unpack.py
tools/: diagonalise.py  plotter.py  run_swo.py
